fix a couple typos

--- a/paper.tex
+++ b/paper.tex
@@ -140,8 +140,8 @@
   adapters by demonstration on a variety of websites and we provide
   example usage scenarios that showcase each of our design principles.
   Our ultimate goal is to empower end-users to customize websites in an
-  intuitive and flexible way, and thus make websites more malleable for
-  all of its users.
+  intuitive and flexible way, making the web more malleable for all of
+  its users.
 \end{abstract}
 
 %%
@@ -483,10 +483,10 @@ enables the system to populate the table view and set up the
 bidirectional synchronization. Because the table is populated and the
 bidirectional synchronization is set up, users can customize as they
 scrape. Live programming is possible in our system because the
-generalization algorithm and adapters execute very quickly. We are yet
-to benchmark the performance and compare it to other
+generalization algorithm and adapters execute very quickly. We have yet
+to benchmark the performance in detail and compare it to other
 programming-by-demonstration systems like FlashExtract \citep{le2014}
-that that provide live feedback.
+that provide live feedback.
 
 \hypertarget{editing-by-demonstration}{%
 \subsection{Editing By Demonstration}\label{editing-by-demonstration}}
@@ -520,7 +520,8 @@ depends on the step that clicks the button to open the menu.
 \subsection{Limitations}\label{limitations}}
 
 \hypertarget{generalization-algorithm}{%
-\subsection{Generalization Algorithm}\label{generalization-algorithm}}
+\subsubsection{Generalization
+Algorithm}\label{generalization-algorithm}}
 
 The row-sibling constraint we mentioned earlier is important for the end
 goal of customization because row elements that are not direct siblings
@@ -560,7 +561,7 @@ row. This is supported in the underlying Wildcard system, but not yet by
 our demonstration-based approach.
 
 \hypertarget{data-loaded-after-initial-render}{%
-\subsection{Data Loaded After Initial
+\subsubsection{Data Loaded After Initial
 Render}\label{data-loaded-after-initial-render}}
 
 Our currently system does not support scraping data loaded after the
