--- a/paper.tex
+++ b/paper.tex
@@ -26,6 +26,8 @@
 
 \settopmatter{printfolios=true}
 
+\usepackage{hyperref}
+
 
 \providecommand{\tightlist}{%
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
@@ -182,6 +184,8 @@
 %% This command processes the author and affiliation and title
 %% information and builds the first part of the formatted document.
 \maketitle
+
+This paper is directed at publication. We have provided a PDF but it is best viewed in the online version (\href{https://kapaya.github.io/px21/}{kapaya.github.io/px21}) which includes videos demonstrating the system.
 
 \hypertarget{sec:introduction}{%
 \section{Introduction}\label{sec:introduction}}
