Fix typo in section 3.4.2

--- a/paper.tex
+++ b/paper.tex
@@ -568,8 +568,8 @@ our demonstration-based approach.
 \subsubsection{Data Loaded After Initial
 Render}\label{data-loaded-after-initial-render}}
 
-Our currently system does not support scraping data loaded after the
-initial websites render as the user scrolls. Site adapters hand-coded in
+Our system currently does not support scraping data loaded after the
+initial website renders as the user scrolls. Site adapters hand-coded in
 Javascript can specify event listeners on the DOM to re-execute the
 scraping code when new data is loaded as a user scrolls. In future work,
 we plan to provide a mechanism for end-users to specify when a
